--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -31,7 +31,7 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Intro", name: intro, widget: object, fields: [
               {label: "Heading", name: "heading", widget: string},
               {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Products", name: products, widget: list, fields: [
+          - {label: "Join", name: join, widget: list, fields: [
               {label: "Image", name: "image", widget: "image"},
               {label: "Text", name: "text", widget: "text"}]}
           - {label: "About", name: "about", widget: "object", fields: [
@@ -54,9 +54,9 @@ collections: # A list of collections the CMS should be able to edit
               - label: Text
                 name: text
                 widget: text
-      - file: "site/content/products/_index.md"
-        label: "Products Page"
-        name: "products"
+      - file: "site/content/join/_index.md"
+        label: "Join Page"
+        name: "join"
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Image, name: image, widget: image}
