Fix page titles

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
-title = "Homepage"
+title = "Open Voice Network"
 googleAnalytics = "UA-145111620-1"
 
 
