Fix error of admin CMS configuration

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
-public_folder: "img","documents"
+public_folder: "img"
 
 collections: # A list of collections the CMS should be able to edit
   - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
