--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -15,9 +15,9 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "document" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Document" # Used in the UI, ie.: "New Document"
-    folder: "site/content/document" # The path to the folder where the documents are stored
+  - name: "paper" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Paper" # Used in the UI, ie.: "New Document"
+    folder: "site/content/paper" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
