--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
+  },
+  "resolutions": {
+    "**/trim-newlines": "3.0.1"
   }
 }
