admin about us page

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -85,7 +85,7 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Title, name: title, widget: string}
           - {label: Image, name: image, widget: image}
           - label: About Sections
-            name: sections
+            name: aboutsections
             widget: list
             fields:
               - {label: Heading, name: heading, widget: string}
