--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -137,12 +137,19 @@ collections: # A list of collections the CMS should be able to edit
               - {label: Image, name: image, widget: image}
               - {label: ButtonText, name: buttonText, widget: object}
               - {label: ButtonLink, name: buttonLink, widget: object}
+          
+      - file: "site/content/voice-chats/_index.md"
+        label: Voice Chats
+        name: voice-chats
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Image, name: image, widget: image}
+          - {label: Description, name: description, widget: text}
           - label: Voice Chats
             name: voicechats
             widget: list
             fields:
               - {label: Title, name: title, widget: string}
-              - {label: Text, name: text, widget: text}
               - {label: Video URL, name: videourl, widget: string}
       - file: "site/content/communities/_index.md"
         label: "Communities Page"
