--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -197,11 +197,25 @@ collections: # A list of collections the CMS should be able to edit
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Image, name: image, widget: image}
-          - {label: Hardsell, name: hardsell, widget: list, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text} ]}
-          - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
-          - {label: Full_image, name: full_image, widget: image}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
+          - label: Top Description
+            name: top
+            widget: object
+            fields:
+              - {label: Description, name: description, widget: string}
+              - {label: Heading, name: heading, widget: string}
+          - label: Bottom Description
+            name: bottom
+            widget: object
+            fields:
+              - {label: Description, name: description, widget: string}
+              - {label: Heading, name: heading, widget: string}
+          - label: Logos
+            name: logos
+            widget: list
+            fields:
+              - {label: Image, name: image, widget: image}
+              - {label: Link, name: link, widget: string}
+              - {label: Alt, name: alt, widget: string}
       - file: "site/content/voice_interoperability_form/_index.md"
         label: "Voice Interoperability Form"
         name: "Voice nteroperability Form"
