--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -89,17 +89,17 @@ collections: # A list of collections the CMS should be able to edit
             widget: list
             fields:
               - {label: Heading, name: heading, widget: string}
-              - {label: Text, name: text, widget: text}
-              - {label: TextHTML, name: textHTML, widget: text}
-              - {label: Image, name: imageUrl, widget: image}
+              - {label: Text, name: text, widget: text, required: false}
+              - {label: TextHTML, name: textHTML, widget: text, required: false}
+              - {label: Image, name: imageUrl, widget: image, required: false}
           - label: SteeringCommittee
             name: steeringcommittee
             widget: list
             fields:
               - {label: Heading, name: heading, widget: string}
               - {label: SubHeading, name: subHeading, widget: string}
-              - {label: Text, name: text, widget: text}
-              - {label: TextHTML, name: textHTML, widget: text}
+              - {label: Text, name: text, widget: text, required: false}
+              - {label: TextHTML, name: textHTML, widget: text, required: false}
               - {label: Image, name: imageUrl, widget: image}
       - file: "site/content/ambassadors/_index.md"
         label: "Ambassadors Page"
@@ -242,4 +242,4 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Image, name: image, widget: image}
           - {label: Heading, name: heading, widget: string}
           - {label: Intro, name: intro, widget: markdown}
-          - {label: CalendarLink, name: calendarLink, widget: markdown}
+          - {label: CalendarLink, name: calendarLink, widget: string}
