--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -243,3 +243,11 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Heading, name: heading, widget: string}
           - {label: Intro, name: intro, widget: markdown}
           - {label: CalendarLink, name: calendarLink, widget: string}
+      - file: "site/content/industries/_index.md"
+        label: "Industries Page"
+        name: "industries"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Image, name: image, widget: image}
+          - {label: SubHeading, name: subheading, widget: string, required: false}
+          - {label: "Body", name: "body", widget: "markdown"}
