--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -385,6 +385,7 @@ collections: # A list of collections the CMS should be able to edit
     folder: "site/content/webinars"
     fields:
       - {label: Title, name: title, widget: string}
+      - {label: Image, name: imageUrl, widget: image}
       - {label: Call To Action Label, name: callToAction, widget: string}
       - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: listItemTitle, displayFields: [listItemTitle]}
     create: true
