--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -8,9 +8,11 @@ public_folder: "img"
 collections: # A list of collections the CMS should be able to edit
   - name: "events" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "events" # Used in the UI, ie.: "New Post"
+    identifier_field: listItemTitle
+    slug: "{{slug}}"
     folder: "site/content/events" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    fields: # The fields each document in this collection have
+    create: true # Allow users to create new documents in this collection   
+    fields: # The fields each document in this collection have      
       - {label: "List Item Title", name: "listItemTitle", widget: "string"}
       - {label: "List Item Image", name: "listItemImage", widget: "image"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
@@ -387,5 +389,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: Title, name: title, widget: string}
       - {label: Image, name: imageUrl, widget: image}
       - {label: Call To Action Label, name: callToAction, widget: string}
-      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: listItemTitle, displayFields: [listItemTitle]}
+      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: "{{slug}}", displayFields: [listItemTitle]}
     create: true
